# mini-stacktrace

./: CMakeLists.txt  README.md  main.cpp
include/mini-stacktrace/: Stacktrace.h  StacktraceDisabled.hpp  StacktraceLinux.h  StacktraceLinux.hpp  StacktraceWindows.h  StacktraceWindows.hpp  mini-stacktrace
